<resources>
    <string name="app_name" translatable="false">Device Info</string>
    <string name="copyright" translatable="false">©ToraLabs</string>
    <string name="dashboard">Dashboard</string>
    <string name="device">Device</string>
    <string name="system">System</string>
    <string name="cpu">CPU</string>
    <string name="battery">Battery</string>
    <string name="display">Display</string>
    <string name="memory">Memory</string>
    <string name="camera">Camera</string>
    <string name="thermal">Thermal</string>
    <string name="sensors">Sensors</string>
    <string name="apps">Apps</string>
    <string name="input">Input Devices</string>
    <string name="tests">Tests</string>
    <string name="setting">Settings</string>
    <string name="rate">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share App</string>
    <string name="shareapk">Share</string>
    <string name="export">Export Details</string>
    <string name="removeads">Remove Ads</string>
    <string name="contact">Contact Developer</string>
    <string name="theme">Theme</string>
    <string name="follow_system">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="accent">Theme Color</string>
    <string name="select_accent">Select a Theme Color</string>
    <string name="general">General</string>
    <string name="temp_unit">Temperature Unit</string>
    <string name="cels">Celsius</string>
    <string name="fahren">Fahrenheit</string>
    <string name="export_data">Export Data</string>
    <string name="save">Save your device information in a text file</string>
    <string name="supportus">Support Us</string>
    <string name="other">Other</string>
    <string name="devicename">Device Name</string>
    <string name="processorname">Processor Name</string>
    <string name="model">Model</string>
    <string name="manu">Manufacturer</string>
    <string name="device_lav">Device</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="brand">Brand</string>
    <string name="devicetype">Device Type</string>
    <string name="device_id">Android Device ID</string>
    <string name="netop">Network Operator</string>
    <string name="nosim">No Sim Card detected.</string>
    <string name="net_type">Network Type</string>
    <string name="mac_address">WiFi MAC Address</string>
    <string name="build_print">Build Fingerprint</string>
    <string name="usb_host">USB Host</string>
    <string name="advertid">Google Advertising ID</string>
    <string name="timezone">Timezone</string>
    <string name="codename">Code Name</string>
    <string name="api">API Level</string>
    <string name="sec_patch">Security Patch Level</string>
    <string name="bootloader">Bootloader</string>
    <string name="build_no">Build Number</string>
    <string name="baseband">Baseband</string>
    <string name="lang">Language</string>
    <string name="root_access">Root Access</string>
    <string name="java_vm">Java VM</string>
    <string name="play_services">Google Play Services</string>
    <string name="kernel">Kernel</string>
    <string name="opengl">OpenGL ES</string>
    <string name="se_linux">SELinux</string>
    <string name="root_manage_apps">Root Management Apps</string>
    <string name="uptime">System Uptime</string>
    <string name="treble">Treble</string>
    <string name="updates">Seamless Updates</string>
    <string name="released">Released</string>
    <string name="date">Released Date</string>
    <string name="root_yes">Root Access Available</string>
    <string name="root_no">Root Access Not Available</string>
    <string name="app_version">App Version</string>
    <string name="requires_per">Click here to grant Permission</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_wifi">No WiFi Connection</string>
    <string name="unknown">Unknown</string>
    <string name="supported">Supported</string>
    <string name="none">None</string>
    <string name="not_supported">Not Supported</string>
    <string name="unable">Unable to determine</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="processor">Processor</string>
    <string name="cpu_arch">CPU Architecture</string>
    <string name="abi">Supported ABIs</string>
    <string name="cpu_hardware">CPU Hardware</string>
    <string name="cpu_type">CPU Type</string>
    <string name="governor">CPU Governor</string>
    <string name="cpu_driver">CPU Scaling Driver</string>
    <string name="cores">Cores</string>
    <string name="cpu_freq">CPU Frequency</string>
    <string name="cpu_running">Running CPUs</string>
    <string name="vulkan">Vulkan Support</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="gpu_render">GPU Renderer</string>
    <string name="gpu_vendor">GPU Vendor</string>
    <string name="gpu_version">GPU Version</string>
    <string name="gpu_extension">Total GPU Extensions</string>
    <string name="health">Health</string>
    <string name="level">Level</string>
    <string name="status">Status</string>
    <string name="battery_stat">Battery Status</string>
    <string name="power_source">Power Source</string>
    <string name="tech">Technology</string>
    <string name="temp">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="capacity">Capacity</string>
    <string name="charging">Charging</string>
    <string name="discharge">Discharging</string>
    <string name="notcharge">Not Charging</string>
    <string name="full">Fully Charged</string>
    <string name="usbport">USB Port</string>
    <string name="ac">AC</string>
    <string name="wireless">Wireless</string>
    <string name="good">Good</string>
    <string name="cold">Cold</string>
    <string name="dead">Dead</string>
    <string name="current">Current</string>
    <string name="overheat">Overheat</string>
    <string name="unspec_fail">Unspecified Failure</string>
    <string name="overvoltage">Over Voltage</string>
    <string name="resol">Resolution</string>
    <string name="density">Density</string>
    <string name="fontscale">Font Scale</string>
    <string name="size">Physical Size</string>
    <string name="ref_rate">Refresh Rate</string>
    <string name="hdr">HDR</string>
    <string name="hdr_cap">HDR Capabilities</string>
    <string name="brightness">Brightness Level</string>
    <string name="bright_mode">Brightness Mode</string>
    <string name="timeout">Screen Timeout</string>
    <string name="orientation">Orientation</string>
    <string name="undefined">Undefined</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="pixel">Pixels</string>
    <string name="seconds">Seconds</string>
    <string name="copied">Copied</string>
    <string name="sensor_avai">Sensors are available on your device</string>
    <string name="vendor">Vendor</string>
    <string name="type">Type</string>
    <string name="power">Power</string>
    <string name="sensorname">Sensor Name</string>
    <string name="details">Details</string>
    <string name="pkgname">Package Name</string>
    <string name="version">Version</string>
    <string name="targetsdk">Target SDK</string>
    <string name="minsdk">Minimum SDK</string>
    <string name="uid">UID</string>
    <string name="install_date">Installation Date</string>
    <string name="update_date">Last Updated</string>
    <string name="permission">Permissions</string>
    <string name="appsize">Size</string>
    <string name="extract">Extract</string>
    <string name="extracting">Extracting APK</string>
    <string name="exporting">Exporting Details</string>
    <string name="search">Search</string>
    <string name="loading">Loading Apps</string>
    <string name="noapps">No Such App Found</string>
    <string name="dots">-----------------------------------</string>
    <string name="saved">Device Information Saved in Downloads Folder.</string>
    <string name="apksaved">Extracted Apk Saved in Downloads Folder.</string>
    <string name="unabletoext">Unable to Extract this Apk.</string>
    <string name="extracted">Apk Extracted Successfully.</string>
    <string name="open">Open</string>
    <string name="ram">Random Access Memory</string>
    <string name="sys_store">System Storage</string>
    <string name="zram">Z-RAM</string>
    <string name="in_store">Internal Storage</string>
    <string name="ext_store">External Storage</string>
    <string name="total_mem">Total Memory</string>
    <string name="used_mem">Used Memory</string>
    <string name="avail_mem">Available Memory</string>
    <string name="usedof">used of</string>
    <string name="nosensors">No Sensors Available</string>
    <string name="nothermal">Thermals are restricted to system only. Accessing them requires Root.</string>
    <string name="nocodec">No Codecs Available</string>
    <string name="noinput">No Input Devices Available</string>
    <string name="nocamera">No Camera Available</string>
    <string name="feedback_stat">If you have any suggestions,questions or problems, don\'t hesitate to contact me.</string>
    <string name="rate_stat">Enjoying this app? Would you mind giving us a feedback on Google Play Store</string>
    <string name="ads">Get rid of Ads. Your small contribution helps me a lot.</string>
    <string name="adfree">You are Already a Premium User. Enjoy your Ad-free experience.</string>
    <string name="totalapps">Total Apps</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="readthis">Please Read This</string>
    <string name="aberration">Aberration Modes</string>
    <string name="antibanding">AntiBanding Modes</string>
    <string name="autoexposure">Auto Exposure Modes</string>
    <string name="compen_step">Compensation Step</string>
    <string name="autofocus">AutoFocus Modes</string>
    <string name="effects">Effects</string>
    <string name="scenemodes">Scene Modes</string>
    <string name="videostable_modes">Video Stabilization Modes</string>
    <string name="autowhitebalance">Auto White Balance Modes</string>
    <string name="max_auto_exposure">Maximum Auto Exposure Regions</string>
    <string name="autofocusreg">Maximum Auto Focus Regions</string>
    <string name="whitebalreg">Maximum Auto White Balance Regions</string>
    <string name="edgemodes">Edge Modes</string>
    <string name="flashavail">Flash Available</string>
    <string name="hotpixelmode">Hot Pixel Modes</string>
    <string name="hardwarelevel">Hardware Level</string>
    <string name="thumbnailsize">Thumbnail Sizes</string>
    <string name="lensplacement">Lens Placement</string>
    <string name="apertures">Apertures</string>
    <string name="filter_dens">Filter Densities</string>
    <string name="focal_length">Focal Lengths</string>
    <string name="optical_stable">Optical Stabilization</string>
    <string name="focus_dist">Focus Distance Calibration</string>
    <string name="camera_capablity">Camera Capabilities</string>
    <string name="max_out_stream">Maximum Output Streams</string>
    <string name="about">About</string>
    <string name="desc_mode">Mode Type Image</string>
    <string name="desc_theme">Theme Color Image</string>
    <string name="desc_temp">Mode Type Image</string>
    <string name="desc_export">Mode Type Image</string>
    <string name="desc_rate">Mode Type Image</string>
    <string name="desc_ads">Mode Type Image</string>
    <string name="desc_feedback">Mode Type Image</string>
    <string name="desc_appversion">Mode Type Image</string>
    <string name="desc_circlecolor">Circle Color (Theme)</string>
    <string name="desc_icon">Splash Icon</string>
</resources>