<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/rate"
        android:icon="@drawable/rate_ic"
        android:title="@string/rate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/export"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/removeads"
        android:title="@string/removeads"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>