<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressSplash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressSplash"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="120dp"
        android:layout_height="2.5dp"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:background="@color/splashgrey"
        android:progressTint="@color/white" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/desc_icon"
        android:src="@drawable/device" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/relroot"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:visibility="gone" />
</RelativeLayout>