<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg">

    <TextView
        android:id="@+id/txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="8dp"
        android:text="@string/theme"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_theme"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/light"
                android:textColor="@color/textcolor"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/dark"
                android:textColor="@color/textcolor"
                android:textSize="17sp" />
        </RelativeLayout>
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="3dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />
</RelativeLayout>